# E-shop

./: .env.sample  README.md  catalog_fixture.json  docker-compose.yaml  groups.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  base_blog.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blog/templates/blog/includes/: menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_category_slug.py  0003_alter_product_options_product_is_published.py  0004_alter_product_options_product_owner.py
catalog/templates/: base.html  contacts.html  home.html  index.html  product_detail.html
catalog/templates/catalog/: base.html  category_products.html  confirm_unpublish.html  contacts.html  index.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: menu.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
